# printer_bot_rs

./: Cargo.toml  README.md  example.env
brother_ql/: Cargo.toml
brother_ql/src/: driver.rs  error.rs  image.rs
brother_ql_cli/: Cargo.toml
brother_ql_cli/src/: main.rs
printer_bot_rs/: Cargo.toml
printer_bot_rs/src/: error.rs  main.rs
src/: driver.rs  error.rs  image.rs  lib.rs  main.rs
