[package]
name = "printer_bot_rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenvy = "0.15.7"
env_logger = "0.11.8"
exoquant = "0.2.0"
image = "0.25.6"
log = "0.4.20"
teloxide-core = "0.13"
thiserror = "2.0.16"
tokio = { version = "1.34.0", features = ["full"] }
